tests/error/enum_errors/duplicate_variant_field.err
Error: Duplicate field (at $FILE:6:22)
  | 
4 | @guppy.enum
5 | class MyEnum:
6 |     var1 = {"x": int, "x": bool}
  |                       ^^^ Enum Variant `var1` already contains a field named `x`

Guppy compilation failed due to 1 previous error
